force-app/main/default/objects/Account/fields/CI_CD_Testfeld4__c.field-meta.xml
<CustomField>
    <fullName>CI_CD_Testfeld4__c</fullName>
    <description>Kommentar4</description>
    <label>CI/CD Testfeld4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>