force-app/main/default/objects/Account/fields/CICD_Testfeld__c.field-meta.xml
<CustomField>
    <fullName>CICD_Testfeld__c</fullName>
    <label>CI/CD Testfeld</label>
    <length>100</length>
    <type>Text</type>
</CustomField>