force-app/main/default/objects/Account/fields/Zweitest_CI_CD_Testfeld__c.field-meta.xml
<CustomField>
    <fullName>Zweitest_CI_CD_Testfeld__c</fullName>
    <label>Zweitest CI/CD Testfeld</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>